# crypto-edge

./: .gitignore  LLM_decider copy.py  LLM_decider.py  README.md  TODO.md  agent.py  agent_example.py  backtest_30days.py  backtester.py  binance_data_collector.py  check_global_indicators.py  debug_atr.py  decision_engine.py  decisions_log.jsonl  integrated_smart_trader.py  liquidation_data.db  main.py  main_hybrid.py  pyproject.toml  realtime_liquidation_trader.py  requirements.txt  run_future_prediction.py  scalping.md  smart_auto_trader.py  test_3min_candle.py  test_atr_object.py  test_atr_rolling.py  test_daily_levels.py  test_daily_levels_advanced.py  test_daily_levels_simple.py  test_external_data_loader.py  test_global_indicators.py  test_global_indicators_for_liquidation.py  test_global_indicators_functions.py  test_global_vwap.py  test_liquidation_data.db  test_liquidation_data_flow.py  test_liquidation_data_format.py  test_session_manager.py  test_singleton_pattern.py  (+8 more)
agent/: agent.py  agent_example.py  ai.py  best_test_performance_model_return0.004.pth  decision_generator.py  decisions_data.parquet  live_trade_agent.py  live_trading_agent.py  multitimeframe_transformer.py  prediction_example.py  progress_state.pkl  rl_agent_core.py  rl_training_system.py  signals_data.json
analyzers/: liquidation_analyzer.py  technical_analyzer.py
bot/: htf_trend_bot.py  vpvr_microbot.py  zscore_mean_reversion_bot.py
charts/: liquidation_report_all_24h.json
config/: integrated_config.py
core/: trader_core.py
data/: ETHUSDC_1h_20230913_20240913.csv  binance_client.py  (+22 more)
(+126 files in other folders)
