[project]
name = "trend-fusion"
version = "0.1.0"
description = "Multi-indicator crypto scalp & swing signals (MACD, EMA, BB, StochRSI, VPVR) using Binance data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "you" }]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "matplotlib>=3.8.0",
  "schedule>=1.2.2",
  "websockets>=15.0.1",
  "seaborn>=0.13.2",
  "scikit-learn>=1.7.1",
  "ollama>=0.5.3",
  "ta>=0.11.0",
  "playwright>=1.55.0",
  "pytz>=2025.2",
  "python-dateutil>=2.9.0.post0",
  "aiohttp>=3.12.15",
  "pyarrow>=21.0.0",
  "flask>=3.1.2",
  "plotly>=6.3.0",
  "flask-socketio>=5.5.1",
  "gym>=0.26.2",
]

[project.scripts]
crypto-signals = "main:main"
